syntax = "proto3";

package gosquare.p2p.shrex.sub;

message RecentEDSNotification {
  uint64 height = 1;
  bytes data_hash = 2;
}

